appId: mystery-box-mobile-app
---
- launchApp
- tapOn:
    id: "profileTab"
- tapOn: "退款记录"
- assertVisible: ".*"
